added temporary background to home page and finished formatting the login screen

--- a/src/assets/pages/login/Login.css
+++ b/src/assets/pages/login/Login.css
@@ -4,7 +4,7 @@
 
 
 /* Slightly blurring background image */
-body::before {
+.login-page::before {
     content: '';
     position: fixed;
     inset: 0;
