added profile icon to nav bar. Added login buttons to nav bar and did away with login page in general

--- a/src/assets/pages/home/Home.css
+++ b/src/assets/pages/home/Home.css
@@ -27,7 +27,6 @@
     position: fixed;
     inset: 0;
     background: rgba(0, 0, 0, 0.35);
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(.5rem);
 }
 
-   
