--- a/src/assets/components/navigation/Navigation.css
+++ b/src/assets/components/navigation/Navigation.css
@@ -48,3 +48,105 @@
       opacity: 1;
     }
   }
+
+.nav-icons {
+    position: fixed;
+    top: 1.5rem;
+    right: 2rem;
+    display: inline-flex;
+    align-items: center;
+    gap: .25rem;
+    padding: .5rem;
+    z-index: 1001;
+    cursor: pointer;
+
+
+}
+
+ 
+
+.nav-icons::before,
+.nav-icons::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.35s, transform 0.35s;
+    pointer-events: none;
+    box-sizing: border-box;
+
+
+}
+
+.nav-icons::before {
+    border-left: 1px solid #F26B83;
+    border-right: 1px solid #F26B83;
+    transform: scaleY(0);
+    transform-origin: center;
+}
+
+.nav-icons::after {
+    border-top: 1px solid #F26B83;
+    border-bottom: 1px solid #F26B83;
+    transform: scaleX(0);
+    transform-origin: center;
+}
+
+.nav-icons:hover::before{
+    opacity: 1;
+    transform: scaleY(1);
+}
+
+.nav-icons:hover::after {
+  opacity: 1;
+  transform: scaleX(1);
+}
+
+
+
+.profile-icon {
+    width: 2rem;
+    height: auto;
+}
+
+.login-btns {
+    position: fixed;
+    top: 5rem;
+    right: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    background: rgba(8, 8, 8, 0.45);
+    backdrop-filter: blur(12px);
+
+    padding: 2rem;
+    box-shadow: 0 .5rem 2rem rgba(0, 0, 0, 0.2);
+
+        /* fallback for old browsers */
+    -webkit-backdrop-filter: blur(60px);
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+}
+
+.login-btn {
+    background: rgba(39, 39, 39, 0.15);
+    backdrop-filter: blur(12px);
+    
+    color: white;
+    box-shadow: 0 .5rem 2rem rgba(139, 136, 136, 0.2);
+
+     /* fallback for old browsers */
+    -webkit-backdrop-filter: blur(60px);
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    box-sizing: border-box;
+}
+
+.login-btn:hover {
+    
+    border: 2px solid #F26B83;
+}
