--- a/src/assets/components/navigation/Navigation.css
+++ b/src/assets/components/navigation/Navigation.css
@@ -11,6 +11,14 @@
     background: rgba(39, 39, 39, 0.25);
     backdrop-filter: blur(12px);
     box-shadow: 0 .5rem 2rem rgba(0, 0, 0, 0.2);
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.anirate:hover {
+    cursor:pointer;
 }
 
 .anirate h1 {
@@ -22,6 +30,30 @@
 	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
     text-shadow: 0 0 5px #f26b84d3;
+}
+
+
+
+.nav-btns {
+  padding-right: 7rem;
+}
+
+.nav-btns ul {
+  display: flex;
+}
+
+.nav-btns li  {
+  color: #F26B83;
+  list-style: none;
+  padding-right: 2rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.nav-btns li:hover {
+    text-shadow: 0 0 5px #f26b84d3;
+    scale: 1.1;
+    cursor: pointer;
 }
 
 @-webkit-keyframes text-focus-in {
@@ -47,64 +79,23 @@
               filter: blur(0px);
       opacity: 1;
     }
-  }
+}
 
 .nav-icons {
-    position: fixed;
-    top: 1.5rem;
-    right: 2rem;
-    display: inline-flex;
-    align-items: center;
-    gap: .25rem;
-    padding: .5rem;
-    z-index: 1001;
-    cursor: pointer;
-
-
+  position: fixed;
+  top: 2.5rem;
+  right: 2rem;
+  display: inline-flex;
+  align-items: center;
+  gap: .25rem;
+  padding: .5rem;
+  z-index: 1001;
+  cursor: pointer;
 }
 
- 
-
-.nav-icons::before,
-.nav-icons::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 0.35s, transform 0.35s;
-    pointer-events: none;
-    box-sizing: border-box;
-
-
-}
-
-.nav-icons::before {
-    border-left: 1px solid #F26B83;
-    border-right: 1px solid #F26B83;
-    border-radius: 1rem;
-    transform: scaleY(0);
-    transform-origin: center;
-}
-
-.nav-icons::after {
-    border-top: 1px solid #F26B83;
-    border-bottom: 1px solid #F26B83;
-    border-radius: 1rem;
-    transform: scaleX(0);
-    transform-origin: center;
-}
-
-.nav-icons:hover::before{
-    opacity: 1;
-    transform: scaleY(1);
-}
-
-.nav-icons:hover::after {
-  opacity: 1;
-  transform: scaleX(1);
+.nav-icons:hover {
+  outline: 2px solid #F26B83;
+  border-radius: 1rem;
 }
 
 
@@ -116,7 +107,7 @@
 
 .login-btns {
     position: fixed;
-    top: 5rem;
+    top: 5.5rem;
     right: 2rem;
 
     display: flex;
