--- a/src/assets/components/navigation/Navigation.css
+++ b/src/assets/components/navigation/Navigation.css
@@ -143,3 +143,63 @@
     
     border: 2px solid #F26B83;
 }
+
+
+@media only screen and (max-width: 58rem) {
+    .menu-icon {
+      width: 3rem;
+    }
+
+    .nav-btns {
+        display: none;
+    }
+
+    .desktop {
+        display: none;
+    }
+
+    .mobile {
+        display: block;
+    }
+
+
+    .nav-btns {
+        padding-right: 0;
+    }
+
+    .nav-btns ul {
+        display: block;
+        margin: 0;
+        padding:0 0 1rem 0;
+    }
+
+    .nav-btns li  {
+        color: #F26B83;
+        list-style: none;
+        padding-right: 2rem;
+        font-size: 1.5rem;
+        font-weight: bold;
+
+        border-radius: 1rem;
+
+        background: rgba(8, 8, 8, 0.45);
+        backdrop-filter: blur(12px);
+
+        padding: .5rem 1rem;
+        margin-bottom: 1rem;
+        box-shadow: 0 .5rem 2rem rgba(0, 0, 0, 0.2);
+
+            /* fallback for old browsers */
+        -webkit-backdrop-filter: blur(60px);
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        box-sizing: border-box;
+      
+        
+    }
+
+    .login-btns {
+        top: 7.5rem;
+        right: 1rem;
+    }
+    
+} 
