--- a/client/src/assets/pages/home/Home.css
+++ b/client/src/assets/pages/home/Home.css
@@ -3,11 +3,18 @@
     width: 100vw;
 
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  
 
  
+}
+
+.home-section {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 8rem 1fr 1fr;
+
+    min-height: 100vh;
+    width: 100vw;
 }
 
 .background-image {
