--- a/client/src/assets/pages/home/Home.css
+++ b/client/src/assets/pages/home/Home.css
@@ -1,7 +1,7 @@
 .home-page {
-    min-height: 100dvh;
+    height: 100dvh;
     width: 100vw;
-
+    
 
   
 
@@ -13,7 +13,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 8rem 1fr 1fr;
 
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
 }
 
