--- a/client/src/assets/components/seasonalAnime/SeasonalAnime.css
+++ b/client/src/assets/components/seasonalAnime/SeasonalAnime.css
@@ -14,3 +14,11 @@
     outline: 1px red solid;
 }
 
+.seasonal-section h3 {
+    color: #F26B83;
+    font-size: 2.25rem;
+    margin: .5rem 0;
+    text-align: center;
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: white;
+}
