--- a/client/src/assets/pages/home/Home.css
+++ b/client/src/assets/pages/home/Home.css
@@ -11,7 +11,7 @@
 .home-section {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 8rem 1fr 1fr;
+    grid-template-rows: 8rem .9fr 1.1fr;
 
     height: 100vh;
     width: 100vw;
