--- a/client/src/assets/pages/home/Home.css
+++ b/client/src/assets/pages/home/Home.css
@@ -1,17 +1,18 @@
+/* * {
+    outline: 1px red solid;
+} */
+
+
 .home-page {
     height: 100dvh;
     width: 100vw;
-    
-
-  
-
  
 }
 
 .home-section {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 8rem .9fr 1.1fr;
+    grid-template-rows: 8rem .8fr 1.2fr;
 
     height: 100vh;
     width: 100vw;
