--- a/client/src/assets/components/weeklyWatchlist/weeklyWatchlist.css
+++ b/client/src/assets/components/weeklyWatchlist/weeklyWatchlist.css
@@ -21,4 +21,18 @@
     font-size: 1.5rem;
     color: white;
 }
-    
+
+
+.weekday h4 {
+    margin: 0;
+    padding: 0;
+}
+
+.weekday h4:hover {
+    cursor: pointer;
+}
+
+.weekday-anime-list {
+    display: flex;
+    overflow-x: scroll;
+}
