--- a/client/src/assets/components/weeklyWatchlist/weeklyWatchlist.css
+++ b/client/src/assets/components/weeklyWatchlist/weeklyWatchlist.css
@@ -1,3 +1,15 @@
+.weekly-watchlist-section {
+    overflow: scroll;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.weekday-anime-list {
+    display: flex;
+    overflow-x: auto;
+}
+
+
 .watchlist-title h3{
     color: #F26B83;
     font-size: 2.25rem;
