--- a/client/src/assets/components/weeklyWatchlist/weeklyWatchlist.css
+++ b/client/src/assets/components/weeklyWatchlist/weeklyWatchlist.css
@@ -4,6 +4,7 @@
     overflow: scroll;
     max-width: 100%;
     max-height: 100%;
+    margin: 0 10%;
 }
 
 /* Note that you should NOT justify-content: center a horizontally scrolling section. It will clip off to the left */
